--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -25,21 +25,26 @@ jobs:
         run: |
             docker build --file $DOCKER_BUILD_DIR/Dockerfile --tag $DOCKER_IMAGE_NAME $DOCKER_BUILD_DIR
             docker tag $DOCKER_IMAGE_NAME $TAG:$VERSION
-
       - name: Output
         run: |
             DOCKER_IMAGE=$DOCKER_IMAGE_NAME TTY= ./snpaas
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+          with:
+            registry: ghcr.io
+            username: ${{ github.actor }}
+            password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Push to GitHub Packages
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          registry: docker.pkg.github.com
-          repository: springernature/ee-snpaas-cli
-          path: ${{steps.docker.outputs.builddir}}
-          dockerfile: ${{steps.docker.outputs.builddir}}/Dockerfile
-          add_git_labels: true
-          tag_with_ref: true
+          context: ${{steps.docker.outputs.builddir}}
+          push: true
+          tags: $TAG:latest
 
 
