--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -45,6 +45,6 @@ jobs:
         with:
           context: ${{steps.docker.outputs.builddir}}
           push: true
-          tags: $TAG:latest
+          tags: ${{steps.docker.outputs.tag}}
 
 
