--- a/.github/workflows/docker-build-release.yml
+++ b/.github/workflows/docker-build-release.yml
@@ -14,6 +14,7 @@ env:
   DOCKER_IMAGE_REPO: platformengineering
   DOCKER_IMAGE_NAME: snpaas-tools
   DOCKER_BUILD_DIR: docker/snpaas-tools
+  VERSION: 3.${{ github.run_number }}.0
 
 jobs:
   build:
@@ -26,39 +27,45 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set docker build variables
-        id: docker
+      - name: Prepare
+        id: prep
         run: |
-            VERSION=$(sed -ne 's/^ARG.* VERSION=\(.*\)/\1/p' ${DOCKER_BUILD_DIR}/Dockerfile)
-            echo 'NAME'=${DOCKER_IMAGE_NAME}) >> $GITHUB_ENV
-            echo 'REPO'=${DOCKER_IMAGE_REPO} >> $GITHUB_ENV
-            echo 'TAG'=${DOCKER_IMAGE_REPO}/${DOCKER_IMAGE_NAME} >> $GITHUB_ENV
-            echo 'BUILDDIR'=${DOCKER_BUILD_DIR} >> $GITHUB_ENV
-            echo 'VERSION'=${VERSION} >> $GITHUB_ENV
-            echo ::set-output name=name::$(echo ${DOCKER_IMAGE_NAME})
-            echo ::set-output name=builddir::$(echo ${DOCKER_BUILD_DIR})
-            echo ::set-output name=version::$(echo ${VERSION})
-            echo ::set-output name=tag::$(echo ${DOCKER_IMAGE_REPO}/${DOCKER_IMAGE_NAME})
+          DOCKER_IMAGE=${{ env.DOCKER_IMAGE_REPO }}/${{ env.DOCKER_IMAGE_NAME }}
+          VERSION=${{ env.VERSION }}
+          if [[ $GITHUB_REF == refs/tags/* ]]; then
+            VERSION=${GITHUB_REF#refs/tags/}
+          elif [[ $GITHUB_REF == refs/heads/* ]]; then
+            VERSION=$(echo ${GITHUB_REF#refs/heads/} | sed -r 's#/+#-#g')
+          elif [[ $GITHUB_REF == refs/pull/* ]]; then
+            VERSION=pr-${{ github.event.number }}
+          fi
+          TAGS="${DOCKER_IMAGE}:${VERSION}"
+          if [ "${{ github.event_name }}" = "push" ]; then
+            TAGS="$TAGS,${DOCKER_IMAGE}:sha-${GITHUB_SHA::8}"
+          fi
+          echo ::set-output name=version::${VERSION}
+          echo ::set-output name=tags::${TAGS}
+          echo ::set-output name=created::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
 
-      - name: Build the latest Docker image
-        run: |
-            docker build --file $BUILDDIR/Dockerfile --tag $NAME $BUILDDIR
-
-      - name: Show Output
-        run: |
-            DOCKER_IMAGE=$NAME TTY= ./snpaas
-
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+      - name: Login to Dockerhub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          path: ${{steps.docker.outputs.builddir}}
-          dockerfile: ${{steps.docker.outputs.builddir}}/Dockerfile
-          repository: ${{steps.docker.outputs.tag}}
-          add_git_labels: true
-          push: ${{ startsWith(github.ref, 'refs/tags/') }}
-          tags: latest,${{steps.docker.outputs.version}}
+
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: ${{ env.DOCKER_BUILD_DIR }}
+          pull: true
+          cache-from: type=registry,ref=${{ env.DOCKER_IMAGE_REPO }}/${{ env.DOCKER_IMAGE_NAME }}:latest
+          cache-to: type=inline
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: latest,${{ steps.prep.outputs.tags }}
+          labels: |
+            org.opencontainers.image.source=${{ github.event.repository.html_url }}
+            org.opencontainers.image.created=${{ steps.prep.outputs.created }}
+            org.opencontainers.image.revision=${{ github.sha }}
 
   release:
     name: Create Release
