--- a/.github/workflows/docker-build-release-eugcr.yml
+++ b/.github/workflows/docker-build-release-eugcr.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Login to Dockerhub
         uses: docker/login-action@v1
         with:
+          registry: ${{ env.REGISTRY }}
           username: _json_key
           password:  ${{ secrets.GCR_PRIVATE_KEY }}
 
