--- a/.github/workflows/docker-build-release-eugcr.yml
+++ b/.github/workflows/docker-build-release-eugcr.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: _json_key
-          password: ${{ secrets.GCR_PRIVATE_KEY }}
+          password: blah
 
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
