--- a/.github/workflows/docker-build-release.yml
+++ b/.github/workflows/docker-build-release.yml
@@ -30,6 +30,8 @@ jobs:
       - name: Prepare
         id: prep
         run: |
+          echo ${{ secrets.DOCKER_USERNAME }}
+          echo ${{ secrets.DOCKER_PASSWORD }}
           DOCKER_IMAGE=${{ env.DOCKER_IMAGE_REPO }}/${{ env.DOCKER_IMAGE_NAME }}
           VERSION=${{ env.VERSION }}
           if [[ $GITHUB_REF == refs/tags/* ]]; then
