--- a/.github/workflows/docker-build-release.yml
+++ b/.github/workflows/docker-build-release.yml
@@ -1,3 +1,77 @@
+name: Publish Docker image to Docker Hub
+
+on:
+  push:
+    branches:
+      - 'master'
+    tags:
+      - 'v*'
+#  release:
+#    types: 
+#    - published
+
+env:
+  RELEASE: snpaas-cli
+  TITLE: "SNPaaS client"
+  DOCKER_IMAGE_REPO: platformengineering
+  DOCKER_IMAGE_NAME: snpaas-tools
+  DOCKER_BUILD_DIR: docker/snpaas-tools
+
+jobs:
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the git repository
+        uses: actions/checkout@v2
+
+      - name: Get metadata for Docker image
+        id: meta
+        uses: docker/metadata-action@v3
+        with:
+          images: ${{ env.DOCKER_IMAGE_REPO }}/${{ env.DOCKER_IMAGE_NAME }}
+          tags: |
+            type=ref,event=tag
+  
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ${{ env.DOCKER_BUILD_DIR }}
+          push: ${{ github.event_name == 'release' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # When a commit is pushed with text matching v*, i.e. v1.0, v20.15.10, creates a new release
 name: Docker build, release and push to DockerHub
 
