--- a/.github/workflows/docker-build-release.yml
+++ b/.github/workflows/docker-build-release.yml
@@ -1,4 +1,4 @@
-name: Publish to DockerHub
+name: Build docker and publish to DockerHub if released
 
 on:
   push:
@@ -6,9 +6,9 @@ on:
       - 'master'
     tags:
       - 'v*'
-#  release:
-#    types: 
-#    - published
+  release:
+    types: 
+      - published
 
 env:
   RELEASE: snpaas-cli
@@ -32,7 +32,10 @@ jobs:
           images: ${{ env.DOCKER_IMAGE_REPO }}/${{ env.DOCKER_IMAGE_NAME }}
           tags: |
             type=ref,event=tag
-  
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -42,7 +45,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
-          context: ${{ env.DOCKER_BUILD_DIR }}
           push: ${{ github.event_name == 'release' }}
+          context: ${{ env.DOCKER_BUILD_DIR }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
