--- a/.github/workflows/docker-push-public-release.yml
+++ b/.github/workflows/docker-push-public-release.yml
@@ -1,11 +1,6 @@
 name: Build docker and publish to DockerHub if released
 
 on:
-  push:
-    branches:
-      - 'master'
-    tags:
-      - 'v*'
   release:
     types: 
       - published
@@ -19,7 +14,7 @@ env:
 
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: Build and push Docker image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the git repository
@@ -29,11 +24,10 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          images: ${{ env.DOCKER_IMAGE_REPO }}/${{ env.DOCKER_IMAGE_NAME }}
+          images: |
+            ${{ env.DOCKER_IMAGE_REPO }}/${{ env.DOCKER_IMAGE_NAME }}
           tags: |
             type=ref,event=tag
-            type=ref,event=branch
-            type=ref,event=pr
             type=semver,pattern={{version}}
 
       - name: Login to DockerHub
@@ -42,10 +36,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASS }}
 
-      - name: Build and push Docker image
+      - name: Build and push the image if it is a release
         uses: docker/build-push-action@v2
         with:
           push: ${{ github.event_name == 'release' }}
           context: ${{ env.DOCKER_BUILD_DIR }}
           tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          labels: ${{ steps.meta.outputs.labels }
+          build-args: |
+            VERSION=${{ fromJSON(steps.meta.outputs.json).labels['org.opencontainers.image.version'] }}
+
